--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gemini 나노 바나나 프롬프트 최적화 도우미-secondbrainlab.com</title>
+    <title>Gemini 나노 바나나 프롬프트 최적화 도우미-secondbrainlab.com v2</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
@@ -71,12 +71,12 @@
             <p class="text-gray-400">간단한 아이디어를 입력하면 이미지 생성에 최적화된 영어 프롬프트로 변환해 드립니다.</p>
         </header>
 
-        <main class="grid grid-cols-1 md:grid-cols-2 gap-6">
+        <main class="grid grid-cols-1 gap-6">
             <!-- Input Panel -->
             <div class="bg-gray-800 p-6 rounded-lg shadow-lg">
                 <h2 class="text-2xl font-semibold mb-4 text-white">1. 프롬프트 입력하기</h2>
                 <textarea id="userInput"
-                    class="w-full h-64 bg-gray-900 border border-gray-700 rounded-md p-4 text-gray-200 focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition duration-200"
+                    class="w-full h-48 bg-gray-900 border border-gray-700 rounded-md p-4 text-gray-200 focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition duration-200"
                     placeholder="예시) 배경 사람 지워줘, 빨간 모자 추가해줘, 유니폼을 모델에게 입혀줘..."></textarea>
             </div>
 
@@ -89,7 +89,7 @@
                         <span>복사</span>
                     </button>
                 </div>
-                <div id="optimizedOutputWrapper" class="w-full h-64 bg-gray-900 border border-gray-700 rounded-md p-4 overflow-y-auto">
+                <div id="optimizedOutputWrapper" class="w-full h-48 bg-gray-900 border border-gray-700 rounded-md p-4 overflow-y-auto">
                     <p id="optimizedOutput" class="text-gray-300 whitespace-pre-wrap">최적화된 프롬프트가 여기에 표시됩니다...</p>
                 </div>
             </div>
@@ -108,6 +108,7 @@
                             <li>"배경 사람 지워줘" <i class="fas fa-arrow-right mx-1 text-gray-500"></i> <code class="text-xs">...remove the 사람 from the scene.</code></li>
                             <li>"빨간 모자 추가해줘" <i class="fas fa-arrow-right mx-1 text-gray-500"></i> <code class="text-xs">...add a hat to the scene.</code></li>
                             <li>"유니폼을 모델에게 입혀줘" <i class="fas fa-arrow-right mx-1 text-gray-500"></i> <code class="text-xs">Take the 유니폼 and place it on...</code></li>
+                             <li>"1번 남자를 지우고 2번 남자로 변경" <i class="fas fa-arrow-right mx-1 text-gray-500"></i> <code class="text-xs">...remove the 1번 남자... and replace them with the 2번 남자.</code></li>
                             <li>"파란색으로 바꿔줘" <i class="fas fa-arrow-right mx-1 text-gray-500"></i> <code class="text-xs">...change the color to blue.</code></li>
                             <li>"숫자 5를 10으로 변경" <i class="fas fa-arrow-right mx-1 text-gray-500"></i> <code class="text-xs">...change the number to 10.</code></li>
                         </ul>
@@ -202,6 +203,14 @@
                 return `Using the provided image, please add a ${subject} to the scene. Make it fit naturally.`;
             }
 
+            // 예: "1번 남자를 지우고 2번 남자로 변경해줘" (이미지 교체)
+            match = text.match(/(.+?)(?:을|를)\s*지우고\s*(.+?)(?:으로|로)\s*(바꿔줘|변경해줘|교체해줘)/);
+            if (match) {
+                const subjectToRemove = match[1].trim();
+                const subjectToAdd = match[2].trim();
+                return `Using the provided images, please remove ${subjectToRemove} from the first image and replace them with ${subjectToAdd}. Ensure the final image is a seamless composite, matching the original lighting, shadows, and style.`;
+            }
+
             // 예: "유니폼을 남자 모델에게 입혀줘" (이미지 합성)
             match = text.match(/(.+?)(?:을|를)\s+(.+?)(?:에게|한테)\s+(입혀줘|씌워줘|합성해줘|합쳐줘)/);
             if (match) {
@@ -279,6 +288,4 @@
 
 </body>
 </html>
-
-
 
